# Hackathon-datssol

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  config.sample.yaml  pyproject.toml
.github/workflows/: ci.yml
Docs/Input/: README.md  datsblack_truth_table_and_mechanics.md  Геймтон DatsBlack .docx  Исследование стратегии участия в HTTP_JSON-соревновании агентов.docx
docs/contract/: assumptions.md  current_truth_table.md  current_truth_table.yaml  implemented_vs_unknown.md  open_questions.md  source_priority.md
docs/dev/: backlog.md  quickstart.md  release_hour_import.md
docs/input/: README.md  datsblack_openapi_reference.md  datsblack_truth_table_and_mechanics.md  datssol_event_snapshot_2026-04-16.md  datsteam_architecture_implications_for_codex.md  offline_context_index.md  questions_for_datsol_release.md  research_memo_highlights.md  snake3d_warmup_summary.md  Документация ИГРЫ.docx
docs/operations/: datsol_release_hour_runbook.md  datssol_import_prep.md  deployment.md  local_live_quickstart.md  training_round_playbook.md
docs/strategy/: preliminary_strategy.md  runtime_vs_offline.md
logs/live/: active_session.json  command_history.ndjson  errors.ndjson  latest_arena.json  (+2 more)
scripts/: analyze_datssol_session.py  check_contract_consistency.py  cli.py  compare_datsblack_strategies.py  offline_decision_lab.py  openapi_diff.py  prepare_datssol_import.py  replay_analytics.py  run_datsblack_fixture.py  run_runtime_fixture_loop.py  start_datssol_autoplay.ps1  stop_datssol_autoplay.ps1  summarize_replay.py
(+114 files in other folders)
