[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datsteam-agent-starter"
version = "0.1.0"
description = "Generic Datsteam competition core with DatsBlack exemplar adapter"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0,<0.29.0",
  "pydantic>=2.7.0,<3.0.0",
  "PyYAML>=6.0.1,<7.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.5.0,<0.7.0",
  "mypy>=1.10.0,<2.0.0",
  "types-PyYAML>=6.0.12.20240311"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
packages = ["datsteam_core", "games"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
